--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: go
 
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -y libpcap0.8 libpcap0.8-dev libnuma-dev
 env:
   - "PATH=/home/travis/gopath/bin:$PATH"
 go:
   - 1.8
   - tip
+
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libpcap0.8 libpcap0.8-dev libnuma-dev
+
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
